# trezor-user-env

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  Makefile  README.md  bin.js  init.sh  patch_emulators.sh  pyproject.toml  remember_position.sh  run-nix.sh  run.sh  run_e2e_tests.sh  setup.cfg  shell.nix  websocket-client.html
.github/: dependabot.yml
.github/workflows/: build-tenv-regtest.yml  build-tenv-test.yml  build-tenv.yml  build_and_push.yml  build_and_push_regtest.yml  build_and_push_test.yml  check-validation.yml  pull_request_ci.yml  test.yml  validation.yml
ci/: Dockerfile  build.yml  enviroment.yml  prebuild.yml  test.yml
controller/: binaries.py  bridge.py  bridge_proxy.py  controller.py  dashboard.py  emulator.py  index.css  index.html  index.js  main.py  proxy.py  shell.nix  suite.py  websocket_server.py
controller/html/: index.html  index.js
docker/: Dockerfile  Dockerfile-debian  Dockerfile.alpine  README.md  compose.local.yml  compose.yml  create_version_file.sh  docker-compose-mac.yml  docker-compose-unix.yml  entrypoint.sh  trezor.html
docker/arm/: Dockerfile
docker/bitcoin-regtest/: Dockerfile  blockchaincfg.json  entrypoint.sh  reset-bitcoin-regtest.sh  start_regtest.sh
docs/: SUMMARY.md  book.toml  controller.md  development.md  index.md  tools.md
firmware/: build.sh
node_bridge/: bin.js
src/: async_bridge_proxy_server.py  binaries.py  bridge.py  bridge_proxy.py  bridge_proxy_server.py  controller.py  dashboard.py  emulator.py  helpers.py  main.py  tropic_model.py  vnc.py  vnc_embed.html  ws_client.py
src/binaries/firmware/: build.sh
src/binaries/node-bridge/: download.sh  modify_node_bin_js.sh
src/bitcoin_regtest/: rpc.py
src/dashboard/: .gitignore  index.css  index.html  index.js  package-lock.json  package.json
src/dashboard/css/: index.css
src/dashboard/js/: index.js  vue.global.js
src/dashboard/src/: App.tsx  main.tsx  types.ts
src/dashboard/src/components/: BridgeSection.tsx  EmulatorCommandsSection.tsx  EmulatorSection.tsx  EventLogSection.tsx  Notification.tsx  RegtestSection.tsx  ServerSection.tsx  TropicSection.tsx
src/dashboard/src/hooks/: useWebSocket.ts
suite/: build.sh
tests/: conftest.py  controller_test.py  mypy_test.py
tools/: delete_red_square.py  ws_client.py
tropic_model/: README.md  start-emulator.sh
