[tool.poetry]
name = "trezor-user-env"
version = "0.0.0"
description = ""
authors = ["SatoshiLabs <info@satoshilabs.com>"]

[tool.poetry.dependencies]
python = "^3.11"
termcolor = "^1.1.0"
trezor = "^0.13.10"
websockets = "^10.1"
psutil = "^5.8.0"
Pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=22.3"
isort = "^5.10.1"
mypy = "^1.15.0"
flake8 = "^7.2.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
types-requests = "^2.32.0.20250328"
types-psutil = "^7.0.0.20250401"

[tool.mypy]
exclude = "^trezor-suite/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
