[project]
name = "trezor-user-env"
version = "0.0.0"
description = ""
authors = [{ name = "SatoshiLabs", email = "info@satoshilabs.com" }]
requires-python = ">=3.11, <4"
dependencies = [
    "termcolor>=1.1.0,<2",
    "trezor @ git+https://github.com/trezor/trezor-firmware.git@fc95bb93fcc2e54dce5be63f5b2a94c551c26267#subdirectory=python",
    "websockets>=12.0",
    "psutil>=5.8.0,<6",
    "Pillow>=10.0.0,<11",
    "tvl @ https://github.com/tropicsquare/ts-tvl/releases/download/2.3/tvl-2.3-py3-none-any.whl",
    "httpx>=0.28.1,<0.29",
    "fastapi>=0.116.1,<0.117",
    "uvicorn>=0.35.0,<0.36",
]

[dependency-groups]
dev = [
    "black>=22.3",
    "isort>=5.10.1,<6",
    "mypy>=1.15.0,<2",
    "flake8>=7.2.0,<8",
    "pytest>=6.2.5,<7",
    "pytest-asyncio>=0.16.0,<0.17",
    "types-requests>=2.32.0.20250328,<3",
    "types-psutil>=7.0.0.20250401,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
exclude = "^trezor-suite/"
